--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container">
       <div class="card">
         <!-- <div class="substitute"></div> -->
-        <img src="/images/image-qr-code.png">
+        <img src="/images/image-qr-code.png" alt="A QR code which directs to the Frontend Mentor site.">
         <p><span class="bold-text">Improve your front-end skills by building projects</span></p> 
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
